# VINS-Fusion

./: .gitignore  README.md
camera_models/: CMakeLists.txt  package.xml
camera_models/camera_calib_example/: readme.txt
camera_models/include/camodocal/camera_models/: Camera.h  PinholeFullCamera.h
camera_models/src/: intrinsic_calib.cc
camera_models/src/camera_models/: CameraFactory.cc  CostFunctionFactory.cc  PinholeFullCamera.cc
config/: vins_rviz_config.rviz
config/A3_ptgrey/: a3_ptgrey_mono_imu_config.yaml  a3_ptgrey_stereo_config.yaml  a3_ptgrey_stereo_imu_config.yaml  a3_ptgrey_stereo_imu_config_backup.yaml  left.yaml  right.yaml
config/box/: box_stereo.yaml  left.yaml  right.yaml
config/euroc/: cam0_pinhole.yaml  cam1_pinhole.yaml  euroc_mono_imu_config.yaml  euroc_stereo_config.yaml  euroc_stereo_imu_config.yaml
config/geminipro/: BMI160_imu_param.yaml  cam.yaml  geminipro.yaml
config/kitti_odom/: cam03.yaml  cam04-12.yaml  kitti_config00-02.yaml  kitti_config03.yaml  kitti_config04-12.yaml  kitti_config13-21.yaml
config/kitti_raw/: cam_09_30.yaml  cam_10_03.yaml  kitti_09_30_config.yaml  kitti_10_03_config.yaml
config/mynteye/: cam0_pinhole.yaml  left_mei.yaml  mynteye_config.yaml  mynteye_mono_imu_config.yaml  mynteye_stereo_config.yaml  mynteye_stereo_imu_config.yaml  right_mei.yaml
config/oak_d_pro/: left.yaml  oakd_stereo_apm_imu.yaml  right.yaml  stereo_inertial_node.launch
config/realsense_d435i/: left.yaml  realsense_stereo_imu_config.yaml  rs_camera.launch
config/realsense_d455/: realsense_stereo_imu_config.yaml  right.yaml  rs_camera.launch
config/realsense_t265/: T265_stereo_imu_config.yaml
config/realsense_t265/848x800_fisheye/: left.yaml  right.yaml
config/simulation/: cam0_mei.yaml  cam1_mei.yaml  simulation_config.yaml
config/ue/: cam0_mei.yaml  cam0_pinhole.yaml  cam1_mei.yaml  euroc_stereo_config.yaml  ue_mono_imu_config_1.yaml  ue_mono_imu_config_2.yaml  ue_mono_imu_config_3.yaml  ue_stereo_imu_config_00.yaml  ue_stereo_imu_config_14.yaml  ue_stereo_imu_config_25.yaml  ue_stereo_imu_config_36.yaml
config/vi_car/: cam0_mei.yaml  cam0_pinhole.yaml  cam1_mei.yaml  cam1_pinhole.yaml  vi_car.yaml
docker/: Dockerfile  Makefile  run.sh
global_fusion/: CMakeLists.txt  package.xml
global_fusion/src/: Factors.h  globalOpt.cpp  globalOpt.h  globalOptNode.cpp
loop_fusion/: CMakeLists.txt  package.xml
loop_fusion/src/: keyframe.cpp  keyframe.h  parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
loop_fusion/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  tic_toc.h  utility.h
support_files/: paper_bib.txt  workflow.md
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/cmake/: FindGperftools.cmake  FindPROFILER.cmake
vins_estimator/launch/: airone.launch  euroc.launch  oneue.launch  vins_rviz.launch
vins_estimator/src/: KITTIGPSTest.cpp  KITTIOdomTest.cpp  rosNodeTest.cpp
vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: imu_factor.h  initial_bias_factor.h  initial_pose_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.cpp  pose_local_parameterization.h  projectionOneFrameTwoCamFactor.cpp  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamFactor.cpp  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.cpp  projectionTwoFrameTwoCamFactor.h  projection_factor.cpp  projection_factor.h
vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp  solve_5pts.h
vins_estimator/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  utility.cpp  visualization.cpp  visualization.h
